forth/test/fail/test_extern_declaration_precedes_redefinition.af
\ Must report the invalid declaration before checking redefinition or linkage.
fun: bad_name [ .plain_call ] end
0 0 extern: bad_name astil_missing_extern
